ListLookupTest: use ContainerInfo and FieldInfo